--- a/index.html
+++ b/index.html
@@ -1,20 +1,9 @@
 <html>
-	<head>
+	<head><meta charset="utf-8">
 		<title>Point of Sale System</title>
 	</head>
 	<body>
 		<h1>Point of Sale System</h1>
-		<h2>System Administration</h2>
-		<ul>
-			<li><a href="./systemAdministration/createNewStaff.html">Create New Staff</a></li>
-			<li><a href="./systemAdministration/viewStaffDetails.html">View Staff Details</a></li>
-			<li><a href="./systemAdministration/viewAllStaffs.html">View All Staffs</a></li>
-			<li><a href="./systemAdministration/createNewProduct.html">Create New Product</a></li>
-			<li><a href="./systemAdministration/viewProductDetails.html">View Product Details</a></li>
-			<li><a href="./systemAdministration/viewAllProducts.html">View All Products</a></li>
-		</ul>
-		<p>
-			<hr/>
 		<h2>Cashier Operation</h2>
 		<ul>
 			<li><a href="./cashierOperation/checkout.html">Checkout</a></li>
